tests/invalid_submodules/bug584.err_exp2
bug584_helper_1.m:018: In the second argument of function symbol `struct'
bug584_helper_1.m:018:   (field name `f2') of the type `struct'/0:
bug584_helper_1.m:018:   error: the type [38;5;87m`foo'/0[39;49m is [38;5;203mundefined.[39;49m
bug584_helper_1.m:018:   (The module [38;5;87m`bug584_helper_1.sub2'[39;49m [38;5;203mhas not been[39;49m
bug584_helper_1.m:018:   [38;5;203mimported in the interface.)[39;49m
bug584_helper_1.m:019: In the third argument of function symbol `struct' (field
bug584_helper_1.m:019:   name `f3') of the type `struct'/0:
bug584_helper_1.m:019:   error: the type [38;5;87m`bug584_helper_1.sub2.foo'/0[39;49m is
bug584_helper_1.m:019:   [38;5;203mundefined.[39;49m
bug584_helper_1.m:019:   (The module [38;5;87m`bug584_helper_1.sub2'[39;49m [38;5;203mhas not been[39;49m
bug584_helper_1.m:019:   [38;5;203mimported in the interface.)[39;49m
`Mercury/ints/bug584_helper_1.sub1.int' and
  `Mercury/int2s/bug584_helper_1.sub1.int2' not written.
